--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,7 @@
 </head>
 
 <header>
-    <a href="../html/index.html" class="title"><span class="initials">R</span>oyal <span class="initials">R</span>estaurations</a>
+    <a href="../html/index.html" class="title"><span class="initials">R</span>oyal <span class="initials">R</span>estorations</a>
         <nav class="nav">
             <ul>
                 <li class="navoptions"><a class="navoptions" href="../html/index.html">Home</a></li>
