--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <header>
-    <a href="../html/index.html" class="title"><span class="initials">R</span>oyal <span class="initials">R</span>estaurations</a>
+    <a href="../html/index.html" class="title"><span class="initials">R</span>oyal <span class="initials">R</span>estorations</a>
             
         <nav class="nav">
             <ul>
@@ -28,7 +28,7 @@
         <div class="wrap"> 
     <div class="bodydiv">
     <article>
-        <h1>Welcome to <span class="initials">R</span>oyal <span class ="initials">R</span>estaurations</h1>
+        <h1>Welcome to <span class="initials">R</span>oyal <span class ="initials">R</span>estorations</h1>
         <h2>Your one-stop-shop for classic car restauration and admiration.</h2>
         <img src="../images/frontcar1.png" class="frontimg">
     </article>
