--- a/html/testimon.html
+++ b/html/testimon.html
@@ -12,7 +12,7 @@
 </head>
 
 <header>
-    <a href="../html/index.html" class="title"><span class="initials">R</span>oyal <span class="initials">R</span>estaurations</a>
+    <a href="../html/index.html" class="title"><span class="initials">R</span>oyal <span class="initials">R</span>estorations</a>
         <nav class="nav">
             <ul>
                 <li class="navoptions"><a class="navoptions" href="../html/index.html">Home</a></li>
@@ -35,7 +35,7 @@
                 <article class="reference">
                     <h3>I've never been to a better place!</h3>
                     <br>
-                    <p>Royal Restaurations always surpass my expectations even though they are really hight from the get-go.<br>
+                    <p>Royal Restorations always surpass my expectations even though they are really hight from the get-go.<br>
                         <br>
                         <span class="fa fa-star checked"></span>
                         <span class="fa fa-star checked"></span>
